syntax = "proto3";

package user_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option go_package = "valera/auth/user_api/pkg/user_v1;user_v1";

service UserAPI {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc Update(UpdateRequest) returns (google.protobuf.Empty);
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
}

message UserInfo {
  string name = 1;
  string email = 2;
  string password = 3;
  string password_confirm = 4;

  enum Role {
    user = 0;
    admin = 1;
  }

  Role role = 5;
}

message CreateRequest {
  UserInfo info = 1;
}

message CreateResponse {
  int64 id = 1;
}

message GetRequest {
  int64 id = 1;
}

message GetResponse {
  User user = 1;
}

message User {
  int64 id = 1;
  string name = 2;
  string email = 3;

  enum Role {
    user = 0;
    admin = 1;
  }

  Role role = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message UpdateRequest {
  int64 id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue email = 3;
}

message UpdateResponse {
  google.protobuf.Empty empty = 1;
}

message DeleteRequest {
  int64 id = 1;
}

message DeleteResponse {
  google.protobuf.Empty empty = 1;
}



